# APCPerception

APC_annotation/: .cproject  .project  APC_annotation  APC_annotation.pro  Makefile  Makefile.Debug  Makefile.Release  apc_annotation.cpp  apc_annotation.h  apc_annotation.ui  compile_command  main.cpp  ui_apc_annotation.h
APC_annotation/debug/: moc_apc_annotation.cpp
aisimagecapture/: CMakeLists.txt  package.xml
aisimagecapture/src/: aic.cpp
