<package format="2">
	<name>aisimagecapture</name>
	<version>0.0.1</version>
	<description>
		AIS Image Capture Tool
	</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rqt_gui</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>


</package>